# bess-optimization

./: MANIFEST.in  README.md  pyproject.toml  registry.py  requirements-dev.txt  requirements.txt  setup.py
bess/: __init__.py  cli.py  io.py  optimize.py  schema.py
bess/data_sources/: __init__.py  _init_.py  csv_loader.py  entsoe_integration.py  entsoe_to_bess.py  load_profiles.py  standard_load_profiles.py
bess/optimization/: __init__.py  milp_dispatcher.py  milp_interface.py
bess/utils/: __init__.py  validators.py
config/: base_config.yaml
config/examples/: ac_coupled.yaml
data/templates/: timeseries_template.csv
docs/: entsoe_guide.md  quickstart.md
examples/: basic_optimization.py  csv_example.py  entsoe_example.py
tests/: test_optimization.py
